codepkg/objects/Variable_Data_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Activated_Date__c</fullName>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code (Cus Inf)</label>
        <referenceTo>Customer_Information__c</referenceTo>
        <relationshipLabel>Variable Data Mappings</relationshipLabel>
        <relationshipName>Variable_Data_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Value_AA__c</fullName>
        <label>Default Value AA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AB__c</fullName>
        <label>Default Value AB</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AC__c</fullName>
        <label>Default Value AC</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AD__c</fullName>
        <label>Default Value AD</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AE__c</fullName>
        <label>Default Value AE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AF__c</fullName>
        <label>Default Value AF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AG__c</fullName>
        <label>Default Value AG</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AH__c</fullName>
        <label>Default Value AH</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AI__c</fullName>
        <label>Default Value AI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AJ__c</fullName>
        <label>Default Value AJ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AK__c</fullName>
        <label>Default Value AK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AL__c</fullName>
        <label>Default Value AL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AM__c</fullName>
        <label>Default Value AM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AN__c</fullName>
        <label>Default Value AN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AO__c</fullName>
        <label>Default Value AO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AP__c</fullName>
        <label>Default Value AP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AQ__c</fullName>
        <label>Default Value AQ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AR__c</fullName>
        <label>Default Value AR</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AS__c</fullName>
        <label>Default Value AS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AT__c</fullName>
        <label>Default Value AT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AU__c</fullName>
        <label>Default Value AU</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AV__c</fullName>
        <label>Default Value AV</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AW__c</fullName>
        <label>Default Value AW</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AX__c</fullName>
        <label>Default Value AX</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AY__c</fullName>
        <label>Default Value AY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_AZ__c</fullName>
        <label>Default Value AZ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_A__c</fullName>
        <label>Default Value A</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_B__c</fullName>
        <label>Default Value B</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_C__c</fullName>
        <label>Default Value C</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_D__c</fullName>
        <label>Default Value D</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_E__c</fullName>
        <label>Default Value E</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_F__c</fullName>
        <label>Default Value F</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_G__c</fullName>
        <label>Default Value G</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_H__c</fullName>
        <label>Default Value H</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_I__c</fullName>
        <label>Default Value I</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_J__c</fullName>
        <label>Default Value J</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_K__c</fullName>
        <label>Default Value K</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_L__c</fullName>
        <label>Default Value L</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_M__c</fullName>
        <label>Default Value M</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_N__c</fullName>
        <label>Default Value N</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_O__c</fullName>
        <label>Default Value O</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_P__c</fullName>
        <label>Default Value P</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_Q__c</fullName>
        <label>Default Value Q</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_R__c</fullName>
        <label>Default Value R</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_S__c</fullName>
        <label>Default Value S</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_T__c</fullName>
        <label>Default Value T</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_U__c</fullName>
        <label>Default Value U</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_V__c</fullName>
        <label>Default Value V</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_W__c</fullName>
        <label>Default Value W</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_X__c</fullName>
        <label>Default Value X</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_Y__c</fullName>
        <label>Default Value Y</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Value_Z__c</fullName>
        <label>Default Value Z</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Column_AA_Destination_Indicator__c</fullName>
        <label>File Column AA Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AA__c</fullName>
        <label>File Column AA</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AB_Destination_Indicator__c</fullName>
        <label>File Column AB Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AB__c</fullName>
        <label>File Column AB</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AC_Destination_Indicator__c</fullName>
        <label>File Column AC Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AC_Destion_Indicator__c</fullName>
        <label>File Column AC Destion Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AC__c</fullName>
        <label>File Column AC</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AD_Destination_Indicator__c</fullName>
        <label>File Column AD Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AD__c</fullName>
        <label>File Column AD</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AE_Destination_Indicator__c</fullName>
        <label>File Column AE Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AE__c</fullName>
        <label>File Column AE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AF_Destination_Indicator__c</fullName>
        <label>File Column AF Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AF__c</fullName>
        <label>File Column AF</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AG_Destination_Indicator__c</fullName>
        <label>File Column AG Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AG__c</fullName>
        <label>File Column AG</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AH_Destination_Indicator__c</fullName>
        <label>File Column AH Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AH__c</fullName>
        <label>File Column AH</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AI_Destination_Indicator__c</fullName>
        <label>File Column AI Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AI__c</fullName>
        <label>File Column AI</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AJ_Destination_Indicator__c</fullName>
        <label>File Column AJ Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AJ__c</fullName>
        <label>File Column AJ</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AK_Destination_Indicator__c</fullName>
        <label>File Column AK Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AK__c</fullName>
        <label>File Column AK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AL_Destination_Indicator__c</fullName>
        <label>File Column AL Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AL__c</fullName>
        <label>File Column AL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AM_Destination_Indicator__c</fullName>
        <label>File Column AM Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AM__c</fullName>
        <label>File Column AM</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AN_Destination_Indicator__c</fullName>
        <label>File Column AN Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AN__c</fullName>
        <label>File Column AN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AO_Destination_Indicator__c</fullName>
        <label>File Column AO Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AO__c</fullName>
        <label>File Column AO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AP_Destination_Indicator__c</fullName>
        <label>File Column AP Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AP__c</fullName>
        <label>File Column AP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AQ_Destination_Indicator__c</fullName>
        <label>File Column AQ Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AQ__c</fullName>
        <label>File Column AQ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AR_Destination_Indicator__c</fullName>
        <label>File Column AR Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AR__c</fullName>
        <label>File Column AR</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AS_Destination_Indicator__c</fullName>
        <label>File Column AS Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AS__c</fullName>
        <label>File Column AS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AT_Destination_Indicator__c</fullName>
        <label>File Column AT Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AT__c</fullName>
        <label>File Column AT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AU_Destination_Indicator__c</fullName>
        <label>File Column AU Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AU__c</fullName>
        <label>File Column AU</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AV_Destination_Indicator__c</fullName>
        <label>File Column AV Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AV__c</fullName>
        <label>File Column AV</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AW_Destination_Indicator__c</fullName>
        <label>File Column AW Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AW__c</fullName>
        <label>File Column AW</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AX_Destination_Indicator__c</fullName>
        <label>File Column AX Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AX__c</fullName>
        <label>File Column AX</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AY_Destination_Indicator__c</fullName>
        <label>File Column AY Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AY__c</fullName>
        <label>File Column AY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_AZ_Destination_Indicator__c</fullName>
        <label>File Column AZ Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_AZ__c</fullName>
        <label>File Column AZ</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_A_Destination_Indicator__c</fullName>
        <label>File Column A Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_A__c</fullName>
        <label>File Column A</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_B_Destination_Indicator__c</fullName>
        <label>File Column B Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_B__c</fullName>
        <label>File Column B</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_C_Destination_Indicator__c</fullName>
        <label>File Column C Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_C__c</fullName>
        <label>File Column C</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_D_Destination_Indicator__c</fullName>
        <label>File Column D Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_D__c</fullName>
        <label>File Column D</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_E_Destination_Indicator__c</fullName>
        <label>File Column E Destination Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_E__c</fullName>
        <label>File Column E</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Column_F_Destination_indicator__c</fullName>
        <label>File Column F Destination indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>POL</fullName>
                </value>
                <value>
                    <fullName>BOTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Column_F__c</fullName>
        <label>File Column F</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>